--- a/竞赛.vcxproj
+++ b/竞赛.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="平方数.cpp" />
     <ClCompile Include="新年趣事之打牌.cpp" />
     <ClCompile Include="部分和.cpp" />
   </ItemGroup>
