--- a/竞赛.vcxproj.filters
+++ b/竞赛.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="新年趣事之打牌.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="部分和.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="新年趣事之打牌.cpp">
+    <ClCompile Include="平方数.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
