--- a/竞赛.vcxproj
+++ b/竞赛.vcxproj
@@ -139,7 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="SPFA.cpp" />
+    <ClCompile Include="dijkstra.cpp" />
+    <ClCompile Include="st表.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
